# diskOfflaner-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DiskOfflaner_TestCert.cer  FILES_CREATED.md  ICON_SETUP.md  LICENSE  QA_REPORT.md  QUICK_START_ICON.md  README.md  README_MIGRATION.md  RELEASE_SUMMARY.md  SECURITY.md  USB_AUTO_REFRESH.md  build.rs  index.html  package.json  sonar-project.properties
.agent/: PLATFORM_CONSISTENCY.md  code_signing_guide.md  performance_optimizations.md  size_optimizations.md
.github/workflows/: ci.yml
assets/: diskofflaner.desktop
design/: icon.pdn
scripts/: SIGNING_QUICK_REFERENCE.md  convert_icon.ps1  create_test_certificate.ps1  github_actions_example.yml  install_linux.sh  prepare_release.ps1  prepare_release.sh  sign_release.ps1  verify_signature.ps1
src/: App.jsx  disk_operations.rs  gui.rs  main.jsx  main.rs  structs.rs
src-tauri/: Cargo.toml  build.rs  build_log.txt  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs  structs.rs  utils.rs
src-tauri/src/disk_operations/: disk_operations_linux.rs  disk_operations_windows.rs
src/components/: DiskCard.jsx  DriveLetterModal.jsx  Logs.jsx  Modal.jsx  Settings.jsx  Sidebar.jsx  SystemInfo.jsx  Tooltip.jsx
src/disk_operations/: disk_operations_linux.rs  disk_operations_windows.rs  mod.rs
src/gui/: mod.rs  themes.rs
src/gui/components/: disk_card.rs  footer.rs  header.rs  mod.rs  partition_list.rs
src/styles/: components.css  index.css  variables.css
src/tests/: mod.rs
