[package]
name = "diskofflaner"
version = "1.0.3"
edition = "2021"

[dependencies]
colored = "2.1"
anyhow = "1.0"
eframe = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libc = "0.2.178"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "fileapi",
    "handleapi",
    "winioctl",
    "winnt",
    "winerror",
    "processthreadsapi",
    "securitybaseapi",
    "ioapiset",
    "wincon"
] }
