[package]
name = "diskofflaner"
version = "1.1.0"
edition = "2021"

[dependencies]
colored = "2.1"
anyhow = "1.0"
eframe = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libc = "0.2.178"
# Only include SVG loader instead of all_loaders to reduce binary size
egui_extras = { version = "0.27", features = ["svg"] }
# Include image dependency for PNG icon loading
image = { version = "0.25", features = ["png"] }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "fileapi",
    "handleapi",
    "winioctl",
    "winnt",
    "winerror",
    "processthreadsapi",
    "securitybaseapi",
    "ioapiset",
    "wincon",
    "sysinfoapi"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Aggressive size optimization for release builds
[profile.release]
opt-level = "z"         # Optimize for size instead of speed
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel codegen for better optimization
strip = true            # Strip symbols from binary
panic = "abort"         # Remove panic unwinding code
