[package]
name = "diskofflaner"
version = "2.0.0"
description = "Safe and simple disk management"
authors = ["Apps Juragan"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# For Windows disk operations
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "fileapi",
    "handleapi",
    "winioctl",
    "winnt",
    "winerror",
    "processthreadsapi",
    "securitybaseapi",
    "ioapiset",
    "wincon",
    "sysinfoapi"
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort" # Strip panic info
codegen-units = 1 # Compile slightly slower, but more optimized
lto = true # Enable link-time optimization
opt-level = "z" # Optimize for size
strip = true # Strip symbols
